Updated to v1.01: New feature: added the ability to click off screen to close the modal box Added: jQuery 1.8.3 min file for modal Fixed: ModalBox disappearing on load bug (rare) Updated: Html imports to allow immediate access

--- a/exampleHtml.html
+++ b/exampleHtml.html
@@ -1,9 +1,11 @@
 <html>
-<link rel="import css here">
+<link rel="stylesheet" type="text/css" href="modaltest.css">
 <footer>
-    <p>&copy; 2014 Dustin H &middot; <a href="#" onclick="$.fn.siteModal(undefined, this)" class="privacyLink">Privacy</a> &middot; <a href="#" onclick="$.fn.siteModal(undefined, this)" class="termsLink">Terms</a>
+
+    <p>&copy; 2014 Dustin H &middot; <a href="#" onclick="$.fn.siteModal(this)" class="privacyLink">Privacy</a> &middot; <a href="#" onclick="$.fn.siteModal(this)" class="termsLink">Terms</a>
 
     </p>
 </footer>
-<script src="import js here"></script>
+<script src="jquery-1.8.3.min.js"></script>
+<script src="main.js"></script>
 </html>
