--- a/exampleHtml.html
+++ b/exampleHtml.html
@@ -1,11 +1,11 @@
 <html>
-<link rel="stylesheet" type="text/css" href="modaltest.css">
-<footer>
+    <link rel="stylesheet" type="text/css" href="modaltest.css">
+    <body>
+        <button id="btn1" class="modal">MathButton</button>
+        <div class="math"> </div>
+    </body>
+    <script src="jquery-1.8.3.min.js"></script>
+    <script src="main.js"></script>
+    <script src="doMath.js"></script>
 
-    <p>&copy; 2014 Dustin H &middot; <a href="#" onclick="$.fn.siteModal(this)" class="privacyLink">Privacy</a> &middot; <a href="#" onclick="$.fn.siteModal(this)" class="termsLink">Terms</a>
-
-    </p>
-</footer>
-<script src="jquery-1.8.3.min.js"></script>
-<script src="main.js"></script>
 </html>
