--- a/exampleHtml.html
+++ b/exampleHtml.html
@@ -1,11 +1,11 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="modaltest.css">
+    <link rel="stylesheet" type="text/css" href="css/modaltest.css">
     <body>
         <button id="btn1" class="modal">MathButton</button>
         <div class="math"> </div>
     </body>
-    <script src="jquery-1.8.3.min.js"></script>
-    <script src="main.js"></script>
-    <script src="doMath.js"></script>
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/doMath.js"></script>
 
 </html>
